--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bolt-expo-starter",
+  "name": "expo-notes-app",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "private": true,
@@ -18,7 +18,7 @@
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
     "dexie": "^3.2.4",
-    "expo": "52.0.33",
+    "expo": "^53.0.0",
     "expo-av": "^13.10.5",
     "expo-blur": "^14.0.3",
     "expo-constants": "^17.0.5",
@@ -30,7 +30,7 @@
     "expo-intent-launcher": "~12.0.2",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "^7.0.5",
-    "expo-router": "4.0.17",
+    "expo-router": "^5.0.0",
     "expo-splash-screen": "^0.29.21",
     "expo-sqlite": "~15.1.2",
     "expo-status-bar": "^2.0.1",
