--- a/package.json
+++ b/package.json
@@ -19,39 +19,39 @@
     "@ui-kitten/eva-icons": "^5.3.1",
     "dexie": "^3.2.4",
     "expo": "^53.0.0",
-    "expo-av": "^13.10.5",
+    "expo-av": "~15.1.4",
     "expo-blur": "^14.0.3",
     "expo-constants": "^17.0.5",
-    "expo-document-picker": "^11.10.1",
-    "expo-file-system": "^16.0.7",
+    "expo-document-picker": "~13.1.5",
+    "expo-file-system": "~18.1.8",
     "expo-font": "^13.0.3",
     "expo-haptics": "^14.0.1",
-    "expo-image-picker": "^14.7.1",
-    "expo-intent-launcher": "~12.0.2",
+    "expo-image-picker": "~16.1.4",
+    "expo-intent-launcher": "~12.1.4",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "^7.0.5",
     "expo-router": "^5.0.0",
-    "expo-splash-screen": "^0.29.21",
-    "expo-sqlite": "~15.1.2",
+    "expo-splash-screen": "~0.30.8",
+    "expo-sqlite": "~15.2.9",
     "expo-status-bar": "^2.0.1",
-    "expo-symbols": "^0.2.2",
-    "expo-system-ui": "^4.0.7",
-    "expo-web-browser": "~14.0.2",
+    "expo-symbols": "~0.4.4",
+    "expo-system-ui": "~5.0.7",
+    "expo-web-browser": "~14.1.6",
     "lucide-react-native": "^0.475.0",
-    "react": "18.3.1",
+    "react": "19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-native": "0.76.6",
-    "react-native-gesture-handler": "^2.23.0",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "^3.16.7",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.4.0",
-    "react-native-svg": "15.8.0",
+    "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "typescript": "^5.3.3"
   }
 }
