--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "^7.0.5",
     "expo-router": "^5.0.0",
+    "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.8",
     "expo-sqlite": "~15.2.9",
     "expo-status-bar": "^2.0.1",
