--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "expo-blur": "^14.0.3",
     "expo-constants": "^17.0.5",
     "expo-document-picker": "~13.1.5",
-    "expo-file-system": "~18.1.8",
+    "expo-file-system": "~18.1.9",
     "expo-font": "^13.0.3",
     "expo-haptics": "^14.0.1",
     "expo-image-picker": "~16.1.4",
@@ -42,6 +42,7 @@
     "react": "19.0.0",
     "react-hook-form": "^7.54.2",
     "react-native": "0.79.2",
+    "react-native-file-viewer": "^2.1.5",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "5.4.0",
